Creazione NavBar e Marker per mappa

--- a/src/frontend/map.html
+++ b/src/frontend/map.html
@@ -18,6 +18,15 @@
 </head>
 
 <body>
+    <div id="navbar"></div>
+
+    <script>
+        fetch("./utility/navbar.html")
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById("navbar").innerHTML = data;
+    });
+    </script>
 
     <div id="map"></div>
 
@@ -27,12 +36,19 @@
         // Center on Trento
         const map = L.map('map').setView([46.0697, 11.1211], 13);
 
+        const orangeIcon = L.icon({
+        iconUrl: "./images/OrangeMarker.png",
+        iconSize: [25, 41],
+        iconAnchor: [12, 41],
+        popupAnchor: [1, -34],
+        })
+
         L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
             maxZoom: 19,
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
         }).addTo(map);
 
-        L.marker([46.0697, 11.1211]).addTo(map)
+        L.marker([46.0697, 11.1211], {icon:orangeIcon}).addTo(map)
             .bindPopup('Trento')
             .openPopup();
     </script>
