Piccolo miglioramento grafico della navbar

--- a/src/frontend/utility/navbar.html
+++ b/src/frontend/utility/navbar.html
@@ -7,9 +7,12 @@
   }
 </style>
 
-<nav class="navbar  navbar-expand-lg  navbar-orange">
-  <a style="font-size: 35px;">TrentoArena</a>
-  <from class="form-inline my-2 my-lg-0">
-    <a class="nav-link" href="map">Mappa</a>
-  </from>
+<nav class="navbar  navbar-orange">
+   <div class="container-fluid">
+     <div class="flex-grow-1"></div>
+       <h1>TrentoArena</h1>
+      <div class="flex-grow-1 d-flex justify-content-end">
+        <a class="nav-link" href="map">Mappa</a>
+      </div>
+   </div>
 </nav>
