--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -58,7 +58,7 @@
                 const data = await response.json();
 
                 if (response.ok) {
-                    window.location.href = '/success.html';
+                    window.location.href = '/homepage.html';
                 } else {
                     alert(data.msg || 'Errore durante il login');
                 }
