--- a/src/frontend/registrazione.html
+++ b/src/frontend/registrazione.html
@@ -71,7 +71,7 @@
                 const data = await response.json();
 
                 if (response.ok) {
-                    window.location.href = '/success.html'; // Or redirect to login
+                    window.location.href = '/homepage.html'; // Or redirect to login
                 } else {
                     alert(data.msg || 'Errore durante la registrazione');
                 }
