--- a/src/frontend/utility/navbar.html
+++ b/src/frontend/utility/navbar.html
@@ -8,11 +8,12 @@
 </style>
 
 <nav class="navbar  navbar-orange">
-   <div class="container-fluid">
-     <div class="flex-grow-1"></div>
-       <h1>TrentoArena</h1>
-      <div class="flex-grow-1 d-flex justify-content-end">
-        <a class="nav-link" href="map">Mappa</a>
-      </div>
-   </div>
+  <div class="container-fluid">
+    <div class="flex-grow-1"></div>
+    <h1>TrentoArena</h1>
+    <div class="flex-grow-1 d-flex justify-content-end">
+      <a class="nav-link" href="map" style="margin-right: 15px;">Mappa</a>
+      <a class="nav-link" href="profile">Profilo</a>
+    </div>
+  </div>
 </nav>
