--- a/src/frontend/utility/navbar.html
+++ b/src/frontend/utility/navbar.html
@@ -12,6 +12,7 @@
     <div class="flex-grow-1"></div>
     <h1>TrentoArena</h1>
     <div class="flex-grow-1 d-flex justify-content-end">
+      <a class="nav-link" href="game_creation" style="margin-right: 15px;">Crea Partita</a>
       <a class="nav-link" href="map" style="margin-right: 15px;">Mappa</a>
       <a class="nav-link" href="profile">Profilo</a>
     </div>
