--- a/src/frontend/game_creation.html
+++ b/src/frontend/game_creation.html
@@ -74,7 +74,7 @@
         </div>
 
         <div class="form-group col-md-4">
-            <strong for="inputTipo">Tipo di partia</strong>
+            <strong for="inputTipo">Tipo di partita</strong>
             <select id="inputTipo" class="form-control">
                 <option selected>Choose...</option>
                 <option>...</option>
